adding scalfmt and prompt